# usc-sdk-rs

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: cargo-publish.yml  release.yml  rust.yml  yank.yml
ccnext-abi-encoding/: Cargo.toml  README.md
ccnext-abi-encoding/src/: lib.rs
ccnext-abi-encoding/src/abi/: mod.rs  v1.rs
ccnext-abi-encoding/src/common/: mod.rs
ccnext-alloy/: .gitignore  Cargo.toml
ccnext-alloy/ccnext-abi-encoding/: Cargo.toml
ccnext-alloy/ccnext-abi-encoding/src/: lib.rs
ccnext-alloy/ccnext-abi-encoding/src/abi/: mod.rs  v1.rs
ccnext-alloy/ccnext-abi-encoding/src/common/: mod.rs
ccnext-alloy/ccnext-abi-encoding/src/solidity_pack/: mod.rs
ccnext-alloy/ccnext-query-builder/: Cargo.toml
ccnext-alloy/ccnext-query-builder/src/: lib.rs  test_helpers.rs  tests.rs
ccnext-alloy/ccnext-query-builder/src/abi/: abi_encoding_mapping.rs  mod.rs  models.rs  query_builder.rs  query_builder_for_function.rs  utils.rs
ccnext-alloy/ccnext-query-builder/src/abi/field_mapping/: mod.rs  v1.rs
ccnext-alloy/src/: main.rs
ccnext-alloy/src/encoding/: mod.rs
ccnext-alloy/src/encoding/abi/: mod.rs
ccnext-alloy/src/encoding/common/: mod.rs
ccnext-alloy/src/encoding/safe_solidity_pack/: mod.rs
ccnext-alloy/src/encoding/solidity_pack/: mod.rs
ccnext-alloy/src/query_builder/: mod.rs  test_helpers.rs  tests.rs
ccnext-alloy/src/query_builder/abi/: abi_encoding_mapping.rs  query_builder.rs  query_builder_for_event.rs  query_builder_for_function.rs  utils.rs
ccnext-query-builder/: Cargo.toml
ccnext-query-builder/src/: lib.rs  tests.rs
ccnext-query-builder/src/abi/: mod.rs  models.rs  query_builder.rs  query_builder_for_event.rs  query_builder_for_function.rs  utils.rs
ccnext-query-builder/src/abi/field_mapping/: mod.rs  v1.rs
ethers/: .gitignore  package-lock.json  package.json
ethers/src/: experimenting.ts  index.ts
ethers/src/encodings/: abi.ts  common.ts  packed-abi-seperated.ts  packed-abi.ts  safe-packed-abi.ts  utils.ts
ethers/src/query-builder/abi/: QueryBuilder.ts  QueryBuilderForEvent.ts  QueryBuilderForFunction.ts  abi-encoding-mapping.ts  abi-utils.ts  models.ts
ethers/src/query-builder/common/: ForkedReader.ts  is-dynamic.ts
ethers/src/utils/: block-receipt.ts
