[workspace]
members = ["ccnext-abi-encoding", "ccnext-query-builder"]
resolver = "2"

[workspace.package]
version = "0.3.0"
license = "Unlicense"
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.11", features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "consensus",
    "rlp",
    "contract",
    "sol-types",
    "signers",
] }
alloy-json-abi = { version = "0.8.23" }
tokio = { version = "1" }
hex = { version = "0.4" }
thiserror = { version = "1.0" }
# Pinned to avoid issues with alloy
serde = { version = "=1.0.220" }
serde_json = { version = "1.0" }

ccnext-abi-encoding = { version = "0.2.0" }
