[package]
edition = { workspace = true }
license = { workspace = true }
name = "ccnext-query-builder"
publish = true
version = "0.7.0"
description = "Query builder library. Used for the construction of ccnext proving queries."

[dependencies]
alloy = { workspace = true }
alloy-json-abi = { workspace = true, features = ["serde_json"] }
async-trait = { version = "0.1.42" }
hex = { workspace = true }

ccnext-abi-encoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
