[package]
edition = "2021"
license = "Unlicense"
name = "ccnext-abi-encoding"
publish = true
version = "0.1.0"
description = "ABI encoding library intended for use with the ccnext project."

[dependencies]
alloy = { workspace = true, features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "consensus",
    "rlp",
    "contract",
    "sol-types",
    "signers"
] }
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }