[package]
edition = "2021"
license = "Unlicense"
name = "ccnext-abi-encoding"
publish = true
version = "0.1.0"
description = "ABI encoding library intended for use with the ccnext project."

[dependencies]
alloy = { version = "0.11", features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "consensus",
    "rlp",
    "contract",
    "sol-types",
    "signers"
] }
alloy-json-abi = { version = "0.8.23", features = ["serde_json"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"