[package]
edition = "2021"
license = "Unlicense"
name = "ccnext-query-builder"
publish = true
version = "0.1.0"
description = "Query builder library. Used for the construction of ccnext proving queries."

[dependencies]
alloy = { workspace = true, features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "consensus",
    "rlp",
    "contract",
    "sol-types",
    "signers"
] }
alloy-json-abi = { workspace = true, features = ["serde_json"] }
tokio = { workspace = true, features = ["full"] }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ccnext-abi-encoding = { workspace = true }