[package]
edition = "2021"
license = "Unlicense"
name = "ccnext-query-builder"
publish = true
version = "0.2.1"
description = "Query builder library. Used for the construction of ccnext proving queries."

[dependencies]
alloy = { version = "0.11", features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "consensus",
    "rlp",
    "contract",
    "sol-types",
    "signers"
] }
alloy-json-abi = { version = "0.8.23", features = ["serde_json"] }
async-trait = { version = "0.1.42" }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ccnext-abi-encoding = { version = "0.1" }